# UserCAM

./: .gitignore  README.md  docker-compose.yml
.github/workflows/: ci.yml
backend/: .gitignore  Cargo.toml  Dockerfile
backend/migrations/2024-05-10-054717_create_tables/: down.sql  up.sql
backend/patches/diesel/diesel/src/mysql/connection/: bind.rs  raw.rs
backend/src/: config.rs  db.rs  generate_password.rs  main.rs  models.rs  schema.rs
backend/src/handlers/: alumnos.rs  auth.rs  dojos.rs  grados.rs  mod.rs  roles.rs  usuarios.rs
backend/src/middleware/: auth.rs
frontend/: .gitignore
