[package]
name = "usercam-api"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
chrono = { version = "0.4", features = ["serde"] }
actix-web = "4.5.1"
ahash = "0.8.11"
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0.116"
dotenv = "0.15.0"
diesel = { version = "2.0", features = ["mysql", "r2d2", "chrono"] }
r2d2 = "0.8"
bcrypt = "0.15.1"
env_logger = "0.9"
jsonwebtoken = "8"
futures = "0.3"
actix-service = "2.0"

[[bin]]
name = "generate_password"
path = "src/generate_password.rs"